--- a/src/modules/tasks/tasks.html
+++ b/src/modules/tasks/tasks.html
@@ -35,7 +35,7 @@
                 </div>
                 <div class="col-md-1 status-options">
                     <label>
-                        <input type="checkbox" name="status1" id="status1" ng-click="taskCntrl.updateStatus('in progress')" ng-checked="createFileShareCntrl.isSelectedStatus('in progress')"> In progress
+                        <input type="checkbox" name="status1" id="status1" ng-click="taskCntrl.updateStatus('in progress')" ng-checked="createFileShareCntrl.isSelectedStatus('processing')"> Processing
                     </label>
                 </div>
                 <div class="col-md-1 status-options">
@@ -70,7 +70,7 @@
         <div class="list-group list-view-pf list-view-pf-equalized-column" ng-repeat="task in taskCntrl.filteredTaskList = (taskCntrl.taskList | filter: taskCntrl.searchBy | filter:taskCntrl.filterByStatus | filter: taskCntrl.filterByCreatedDate)">
             <div class="list-group-item">
                 <div class="list-view-pf-left col-md-1">
-                    <i ng-class="{'pficon pficon-error-circle-o': (task.status === 'failed'), 'pficon pficon-ok': (task.status === 'finished'), 'pficon pficon-warning-triangle-o': (task.status === 'warning'), 'fa fa-spinner': (task.status === 'in progress')}"></i>
+                    <i ng-class="{'pficon pficon-error-circle-o': (task.status === 'failed'), 'pficon pficon-ok': (task.status === 'finished'), 'pficon pficon-warning-triangle-o': (task.status === 'warning'), 'fa fa-spinner': (task.status === 'processing')}"></i>
                 </div>
                 <div class="col-md-3 text-center">
                     <a href="" ng-click="taskCntrl.goToTaskDetail(task.job_id)" ng-if="task.flow" class="bold-text">{{task.flow}}</a>
